--- a/public/tfetch-auth/index.html
+++ b/public/tfetch-auth/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link href="./output.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Tesla Fetch</title>
   </head>
 
   <body class="bg-stone-950 p-20">
